--- a/home-page/loginpage.html
+++ b/home-page/loginpage.html
@@ -13,11 +13,11 @@
       <form action="#">
         <div class="title">Login</div>
         <div class="input-box underline">
-          <input type="text" placeholder="Enter Your Email" required>
+          <input type="text" placeholder="Email" required>
           <div class="underline"></div>
         </div>
         <div class="input-box">
-          <input type="password" placeholder="Enter Your Password" required>
+          <input type="password" placeholder="Password" required>
           <div class="underline"></div>
         </div>
         <div class="input-box button">
