--- a/home-page/index.html
+++ b/home-page/index.html
@@ -30,13 +30,13 @@
                         <a class="nav-link" href="#">Add a recipie</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Add ingredients </a>
+                        <a class="nav-link" href="https://www.sainsburys.co.uk/webapp/wcs/stores/servlet/gb/groceries?utm_campaign=11198263433&utm_medium=cpc&storeId=10151&gclid=CjwKCAjw0ZiiBhBKEiwA4PT9z7e_ofFlE3rLcdVRJ98fK60znWoC3khyzgLrvUlgKWPayF_7iDkmHBoCwgUQAvD_BwE&langId=44&utm_source=Google&krypto=KKoPTTqU6N85xeQfrFQZtH9XH21Ate41W11F362JAECJH9wa5KHqcnv4dXptA36Ga4K2pastzGql6%2FSkb7QUF4mxuq9r2IdCj%2FSHyaG3Mztg3GJFcQZFKJnk2%2Fbh4hhVnYeELNPGfQyFaj2qHvf3yrdoU7fQr8ZX8FzkjaL30Rj%2BsIRkikBVm2M99kjMM5DqBALzfcERZQFV1HfgzFXbuqtJKYOjeV6aP4VBiJDgMHwup9W1%2FmyIyX3qeRLTZtKTrS5wpOdQkYL1NYDIHLn3Aht1qBtwYSXOkvz2Tjw5eUv5VXNXHLX5VqgsOxdssD0%2F&ddkey=https%3Agb%2Fgroceries">Add ingredients to shopping list</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cuisine</a>
+                        <a class="nav-link" href="recipeblog.html">Blog</a>
                     </li>
                     <li class="nav-item" id="sign_in">
-                        <a class="nav-link" href="#">Sign in</a>
+                        <a class="nav-link" href="loginpage.html">Login in</a>
                     </li>
                 </ul>
             </div>
