--- a/home-page/Homepage.html
+++ b/home-page/Homepage.html
@@ -20,7 +20,6 @@
             <a class="navbar-brand" href="./index.html">THE FOODGASM BLOGSPOT!</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span></button>
-            <!-- Nav bar section -->
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-md-0" id="nav_bar">
                     <!-- Each link in the nav bar is a list element, with a link element inside it -->
@@ -35,7 +34,7 @@
                         <a class="nav-link" href="https://www.sainsburys.co.uk/webapp/wcs/stores/servlet/gb/groceries?utm_campaign=11198263433&utm_medium=cpc&storeId=10151&gclid=CjwKCAjw0ZiiBhBKEiwA4PT9z7e_ofFlE3rLcdVRJ98fK60znWoC3khyzgLrvUlgKWPayF_7iDkmHBoCwgUQAvD_BwE&langId=44&utm_source=Google&krypto=KKoPTTqU6N85xeQfrFQZtH9XH21Ate41W11F362JAECJH9wa5KHqcnv4dXptA36Ga4K2pastzGql6%2FSkb7QUF4mxuq9r2IdCj%2FSHyaG3Mztg3GJFcQZFKJnk2%2Fbh4hhVnYeELNPGfQyFaj2qHvf3yrdoU7fQr8ZX8FzkjaL30Rj%2BsIRkikBVm2M99kjMM5DqBALzfcERZQFV1HfgzFXbuqtJKYOjeV6aP4VBiJDgMHwup9W1%2FmyIyX3qeRLTZtKTrS5wpOdQkYL1NYDIHLn3Aht1qBtwYSXOkvz2Tjw5eUv5VXNXHLX5VqgsOxdssD0%2F&ddkey=https%3Agb%2Fgroceries">Add ingredients to shopping list</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="recipeblog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item" id="sign_in">
                         <a class="nav-link" href="loginpage.html">Login in</a>
@@ -44,10 +43,11 @@
             </div>
 
         </nav>
+  
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="background.jpg" class="d-block w-100" alt="First slide">
+                    <img src="colourful-various-herbs-spices-cooking-dark-background-herbs-spices-cooking-dark-background-113655482 (1).jpg" class="d-block w-100" alt="First slide">
                     <div class="carousel-caption d-md-block">
                         <p>Search for your recipe here:</p>
                         <form class="d-flex">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="food-cooking-baking-background-various-ingredients-utensils-wood-clear-center-61929011.jpg" class="d-block w-100" alt="Second slide">
+                    <img src="food-cooking-baking-background-various-ingredients-utensils-wood-clear-center-61929011 (1).jpg" class="d-block w-100" alt="Second slide">
                     <div class="carousel-caption d-md-block">
                         <p>Search for your recipe here:</p>
                         <form class="d-flex">
@@ -91,8 +91,8 @@
                     We can't wait to see what you cook up in your kitchen!</p> 
                 </center>
             </div>
-
-        <h2> Popular Recipes</h2>
+            <center>
+        <h2> Popular Recipes</h2> </center>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 px-3">
