--- a/home-page/Homepage.html
+++ b/home-page/Homepage.html
@@ -49,7 +49,7 @@
                 <div class="carousel-item active">
                     <img src="colourful-various-herbs-spices-cooking-dark-background-herbs-spices-cooking-dark-background-113655482 (1).jpg" class="d-block w-100" alt="First slide">
                     <div class="carousel-caption d-md-block">
-                        <p>Search for your recipe here:</p>
+                        <p>Search for your receipe here:</p>
                         <form class="d-flex">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
@@ -59,7 +59,7 @@
                 <div class="carousel-item">
                     <img src="food-cooking-baking-background-various-ingredients-utensils-wood-clear-center-61929011 (1).jpg" class="d-block w-100" alt="Second slide">
                     <div class="carousel-caption d-md-block">
-                        <p>Search for your recipe here:</p>
+                        <p>Search for your receipe here:</p>
                         <form class="d-flex">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
@@ -84,7 +84,7 @@
             <h2>About Us</h2>
         </center>
                 <center>
-                    <p>Welcome to our recipe website! Our mission is to inspire and empower home cooks everywhere to create delicious, nutritious meals that are easy to make and enjoyable to share with family and friends. We believe that everyone can learn to
+                    <p>Welcome to our receipe website! Our mission is to inspire and empower home cooks everywhere to create delicious, nutritious meals that are easy to make and enjoyable to share with family and friends. We believe that everyone can learn to
                     cook, regardless of their skill level or experience in the kitchen.<br> Our team of passionate foodies is dedicated to curating a diverse collection of recipes that cater to a wide range of tastes and dietary preferences. From quick
                     and easy weeknight dinners to indulgent desserts, we've got you covered.<br> We believe that cooking is not only a way to nourish your body, but also a way to connect with others and celebrate life's moments. That's why we're committed
                     to sharing our love of cooking with you and helping you to discover the joy and satisfaction that comes from creating and sharing a great meal.<br> Thank you for choosing our recipe website as your go-to source for culinary inspiration.
@@ -92,7 +92,7 @@
                 </center>
             </div>
             <center>
-        <h2> Popular Recipes</h2> </center>
+        <h2> Popular Receipes</h2> </center>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 px-3">
@@ -100,7 +100,7 @@
                         <article>
                             <a href="#"><img class="img-fluid recipes" src="The-Ultimate-Mediterranean-Bowl-SQUARE.jpg" alt="image1"></a>
                             <h3>The Ultimate Mediterranean Bowl</h3>
-                            <p>Recipe and step by step guide</p>
+                            <p>Receipe and step by step guide</p>
                         </article>
                     </div>
                     <div class="col-lg-4 col-sm-6 px-3">
@@ -108,7 +108,7 @@
                         <article>
                             <a href="#"><img class="img-fluid recipes" src="Beef-and-Broccoli-square-FS.jpg" alt="image2"></a>
                             <h3>Beef And Broccoli</h3>
-                            <p>Recipe and step by step guide</p>
+                            <p>Receipe and step by step guide</p>
                         </article>
                     </div>
                     <div class="col-lg-4 col-sm-6 px-3">
@@ -116,7 +116,7 @@
                         <article>
                             <a href="#"><img class="img-fluid recipes" src="Easy-Shawarma-Chicken-Recipe22-500x500.webp" alt="image3"></a>
                             <h3>Chicken Shawarma</h3>
-                            <p>Recipe and step by step guide</p>
+                            <p>Receipe and step by step guide</p>
                         </article>
                     </div>
 
@@ -126,7 +126,7 @@
                         <article>
                             <a href="#"><img class="img-fluid recipes" src="Lemon-Garlic-Butter-Shrimp-sq.jpg" alt="image1"></a>
                             <h3>Lemon Garlic Butter Shrimp</h3>
-                            <p>Recipe and step by step guide</p>
+                            <p>Receipe and step by step guide</p>
                         </article>
                     </div>
                     <div class="col-lg-4 col-sm-6 px-3">
@@ -134,7 +134,7 @@
                         <article>
                             <a href="#"><img class="img-fluid recipes" src="flat-iron-chimichurri-smashed-potatoes-RU340466.jpg" alt="image2"></a>
                             <h3>Flat-iron Chimichurri smashed potatoes</h3>
-                            <p>Recipe and step by step guide</p>
+                            <p>Receipe and step by step guide</p>
                         </article>
                     </div>
                     <div class="col-lg-4 col-sm-6 px-3">
@@ -142,7 +142,7 @@
                         <article>
                             <a href="#"><img class="img-fluid recipes" src="jerky.jpeg" alt="image3"></a>
                             <h3>Jerk</h3>
-                            <p>Recipe and step by step guide</p>
+                            <p>Receipe and step by step guide</p>
                         </article>
                     </div>
                 </div>
