--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="blog.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html">Login</a>
+            <a class="nav-link" href="loginpage.html">Login</a>
           </li>
         </ul>
       </div>
