--- a/Project_file/Homepage.html
+++ b/Project_file/Homepage.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item" id="sign_in">
-                        <a class="nav-link" href="loginpage.html">Login in</a>
+                        <a class="nav-link" href="loginpage.html">Log in</a>
                     </li>
                     </li>
                 </ul>
