--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand text-light" href="./index.html">THE FOODGASM BLOGSPOT!</a>
+            <a class="navbar-brand text-light" href="index.html">THE FOODGASM BLOGSPOT!</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
