--- a/loginpage.html
+++ b/loginpage.html
@@ -1,41 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="css/login.css">
-</head>
+    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  </head>
 
-<body>
+  <body>
+        <!-- ==== NAV BAR (BOOTSTRAP) ===== -->
+    <!-- use the "fixed-top" bootstrap class to fix the nav bar to the top of page.
+         BUT, remember to add enough padding to the top of the <body> -->
+          <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="./index.html">THE FOODGASM BLOGSPOT!</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="Homepage.html">Home</a>
+                </li>
+                <li class="nav-item active">
+                <a class="nav-link" href="recipeblog.html">Blog</a>
+            </li>
+            <li class="nav-item" id="sign_in">
+                <a class="nav-link" href="loginpage.html">Login in</a>
+            </li>
+                </li>
+              </ul>
+            </div>
+          </nav>
+
     <div class="container">
-        <form action="#">
-            <div class="title">Login</div>
-            <div class="input-box underline">
-                <input type="text" placeholder="Email" required>
-                <div class="underline"></div>
-            </div>
-            <div class="input-box">
-                <input type="password" placeholder="Password" required>
-                <div class="underline"></div>
-            </div>
-            <div class="input-box button">
-                <input type="submit" name="" value="Continue">
-            </div>
-        </form>
+      <form action="#">
+        <div class="title">Login</div>
+        <div class="input-box underline">
+          <input type="text" placeholder="Enter Your Email" required>
+          <div class="underline"></div>
+        </div>
+        <div class="input-box">
+          <input type="password" placeholder="Enter Your Password" required>
+          <div class="underline"></div>
+        </div>
+        <div class="input-box button">
+          <input type="submit" name="" value="Continue">
+        </div>
+      </form>
         <div class="option">OR Connect With </div>
         <div class="twitter">
-            <li class="nav-links">
+            <ol class="nav-links">
                 <a href="https://twitter.com/">Twitter</a>
-            </li>
+            </ol>
         </div>
         <div class="facebook">
-            <li class="nav-links">
+            <ol class="nav-links">
                 <a href="https://www.facebook.com/">Facebook</a>
         </div>
     </div>
 </body>
-
+<footer>
+  <!-- ==== social icons ==== -->
+  <a href="https://twitter.com" target="_blank">
+    <span class='social-icon'><i class="fab fa-twitter"></i></span>
+  </a>
+  <a href="https://facebook.com" target="_blank">
+    <span class='social-icon'><i class="fab fa-facebook-f"></i></span>
+  </a>
+  <a href="https://instagram.com" target="_blank">
+    <span class='social-icon'><i class="fab fa-instagram"></i></span>
+  </a>
+</footer>
+<!-- ==== button that scrolls window to the top ==== -->
+<button class="btn btn-primary" onclick="topFunction()" id="go-top-button" title="Go to top">Top</button>
+<!-- Bootstrap needs the these 3 javascript links for things like carousel and modals to work properly.
+     we also need jQuery for the code for the "scroll to the top" code in scripts.js -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- our custom javascript -->
+<script src="login.js"></script>
+</body>
 </html>
