--- a/loginpage.html
+++ b/loginpage.html
@@ -14,7 +14,7 @@
     <!-- use the "fixed-top" bootstrap class to fix the nav bar to the top of page.
          BUT, remember to add enough padding to the top of the <body> -->
           <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="./index.html">THE FOODGASM BLOGSPOT!</a>
+            <a class="navbar-brand" href="Homepage.html">THE FOODGASM BLOGSPOT!</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -61,17 +61,7 @@
         </div>
     </div>
 </body>
-<footer>
-  <!-- ==== social icons ==== -->
-  <a href="https://twitter.com" target="_blank">
-    <span class='social-icon'><i class="fab fa-twitter"></i></span>
-  </a>
-  <a href="https://facebook.com" target="_blank">
-    <span class='social-icon'><i class="fab fa-facebook-f"></i></span>
-  </a>
-  <a href="https://instagram.com" target="_blank">
-    <span class='social-icon'><i class="fab fa-instagram"></i></span>
-  </a>
+
 
 </body>
 </html>
