--- a/loginpage.html
+++ b/loginpage.html
@@ -14,17 +14,17 @@
     <!-- use the "fixed-top" bootstrap class to fix the nav bar to the top of page.
          BUT, remember to add enough padding to the top of the <body> -->
           <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="index.html">THE FOODGASM BLOGSPOT!</a>
+            <a class="navbar-brand" href="Homepage.html">THE FOODGASM BLOGSPOT!</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="Homepage.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                <a class="nav-link" href="blog.html">Blog</a>
+                <a class="nav-link" href="recipeblog.html">Blog</a>
             </li>
             <li class="nav-item" id="sign_in">
                 <a class="nav-link" href="loginpage.html">Login in</a>
