--- a/loginpage.html
+++ b/loginpage.html
@@ -1,67 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-
-  <body>
-        <!-- ==== NAV BAR (BOOTSTRAP) ===== -->
-    <!-- use the "fixed-top" bootstrap class to fix the nav bar to the top of page.
-         BUT, remember to add enough padding to the top of the <body> -->
-          <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="Homepage.html">THE FOODGASM BLOGSPOT!</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="Homepage.html">Home</a>
-                </li>
-                <li class="nav-item active">
-                <a class="nav-link" href="recipeblog.html">Blog</a>
-            </li>
-            <li class="nav-item" id="sign_in">
-                <a class="nav-link" href="loginpage.html">Login in</a>
-            </li>
-                </li>
-              </ul>
+<!-- Created By CodingNepal -->
+<html lang="en" dir="ltr">
+   <head>
+      <meta charset="utf-8">
+      <title>Animated Login Form</title>
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+   </head>
+   <body>
+      <div class="container">
+         <header>Login Form</header>
+         <form>
+            <div class="input-field">
+               <input type="text" required>
+               <label>Email or Username</label>
             </div>
-          </nav>
-
-    <div class="container">
-      <form action="#">
-        <div class="title">Login</div>
-        <div class="input-box underline">
-          <input type="text" placeholder="Enter Your Email" required>
-          <div class="underline"></div>
-        </div>
-        <div class="input-box">
-          <input type="password" placeholder="Enter Your Password" required>
-          <div class="underline"></div>
-        </div>
-        <div class="input-box button">
-          <input type="submit" name="" value="Continue">
-        </div>
-      </form>
-        <div class="option">OR Connect With </div>
-        <div class="twitter">
-            <ol class="nav-links">
-                <a href="https://twitter.com/">Twitter</a>
-            </ol>
-        </div>
-        <div class="facebook">
-            <ol class="nav-links">
-                <a href="https://www.facebook.com/">Facebook</a>
-        </div>
-    </div>
-</body>
-
-
-</body>
+            <div class="input-field">
+               <input class="pswrd" type="password" required>
+               <span class="show">SHOW</span>
+               <label>Password</label>
+            </div>
+            <div class="button">
+               <div class="inner"></div>
+               <button>LOGIN</button>
+            </div>
+         </form>
+         <div class="auth">
+            Or login with
+         </div>
+         <div class="links">
+            <div class="facebook">
+               <i class="fab fa-facebook-square"><span>Facebook</span></i>
+            </div>
+            <div class="google">
+               <i class="fab fa-google-plus-square"><span>Google</span></i>
+            </div>
+         </div>
+         <div class="signup">
+            Not a member? <a href="#">Signup now</a>
+         </div>
+      </div>
+      <script>
+         var input = document.querySelector('.pswrd');
+         var show = document.querySelector('.show');
+         show.addEventListener('click', active);
+         function active(){
+           if(input.type === "password"){
+             input.type = "text";
+             show.style.color = "#1DA1F2";
+             show.textContent = "HIDE";
+           }else{
+             input.type = "password";
+             show.textContent = "SHOW";
+             show.style.color = "#111";
+           }
+         }
+      </script>
+   </body>
 </html>
