--- a/loginpage.html
+++ b/loginpage.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en" dir="ltr">
+<html lang="en">
    <head>
       <meta charset="utf-8">
       <title>Animated Login Form</title>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="logintest.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    </head>
    <body>
+           <!-- ==== NAV BAR (BOOTSTRAP) ===== -->
+    <!-- use the "fixed-top" bootstrap class to fix the nav bar to the top of page.
+         BUT, remember to add enough padding to the top of the <body> -->
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+                <a class="navbar-brand" href="Homepage.html">THE FOODGASM BLOGSPOT!</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="Homepage.html">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                    <a class="nav-link" href="recipeblog.html">Blog</a>
+                </li>
+                <li class="nav-item" id="sign_in">
+                    <a class="nav-link" href="loginpage.html">Login in</a>
+                </li>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
       <div class="container">
-         <header>Login Form</header>
+         <header>Login</header>
          <form>
             <div class="input-field">
                <input type="text" required>
@@ -28,13 +50,17 @@
          <div class="auth">
             Or login with
          </div>
+        <div class="twitter">
+            <ol class="nav-links">
+                <a href="https://twitter.com/">Twitter</a>
+            </ol>
+            </div>
          <div class="links">
             <div class="facebook">
-               <i class="fab fa-facebook-square"><span>Facebook</span></i>
+                <ol class="nav-links">
+                    <a href="https://www.facebook.com/">Facebook</a>
             </div>
-            <div class="google">
-               <i class="fab fa-google-plus-square"><span>Google</span></i>
-            </div>
+           
          </div>
          <div class="signup">
             Not a member? <a href="#">Signup now</a>
