--- a/loginpage.html
+++ b/loginpage.html
@@ -3,7 +3,8 @@
    <head>
       <meta charset="utf-8">
       <title>Animated Login Form</title>
-      <link rel="stylesheet" href="logintest.css">
+      <link rel="stylesheet" href="log_in.css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    </head>
    <body>
@@ -24,7 +25,7 @@
                     <a class="nav-link" href="recipeblog.html">Blog</a>
                 </li>
                 <li class="nav-item" id="sign_in">
-                    <a class="nav-link" href="loginpage.html">Login in</a>
+                    <a class="nav-link" href="login.html">Login</a>
                 </li>
                     </li>
                   </ul>
@@ -47,25 +48,19 @@
                <button>LOGIN</button>
             </div>
          </form>
-         <div class="auth">
+         <div class="option">
             Or login with
          </div>
-        <div class="twitter">
+         <div class="twitter">
             <ol class="nav-links">
                 <a href="https://twitter.com/">Twitter</a>
             </ol>
-            </div>
-         <div class="links">
-            <div class="facebook">
-                <ol class="nav-links">
-                    <a href="https://www.facebook.com/">Facebook</a>
-            </div>
+        </div>
+        <div class="facebook">
+            <ol class="nav-links">
+                <a href="https://www.facebook.com/">Facebook</a>
+        </div>
            
-         </div>
-         <div class="signup">
-            Not a member? <a href="#">Signup now</a>
-         </div>
-      </div>
       <script>
          var input = document.querySelector('.pswrd');
          var show = document.querySelector('.show');
